# BLAS_at_home

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  TSoPMC_toc.txt  run.sh
src/: bah.hpp  bah_array.hpp  bah_concepts.hpp  bah_level1.cpp  bah_level1.hpp
test/: array_helpers.hpp  bah_array_test.cpp  bah_level1_test.cpp  gtest_helpers.hpp  print_helpers.hpp  test_main.cpp  timer.hpp
